--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  lz4-r127.tar.gz: 1aa7d4bb62eb79f88b33f86f9890dc9f96797af5
+  lz4-7d182b816ace89d6d6d16b7aee376a9962a05caa.tar.gz: 38a5bc022cba94735abb9e1de36494feea33f8b5
