--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  lz4-7d182b816ace89d6d6d16b7aee376a9962a05caa.tar.gz: 38a5bc022cba94735abb9e1de36494feea33f8b5
+  lz4-r130.tar.gz: 5e1167e578639cb75e4103933dbf68e193a4d4c4
